addons/rollout/argocd/manifests/ingress-traefik/rollout-ingress-traefik.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

---
# this ingress will be merged with ingress provided in:
# addons/ingress/traefik/manifests/cluster-local-ingress.yaml
# and exposes the kubernetes-dashboard angular application on:
# https://k2s.cluster.local/rollout
# The certificate is taken from k8s secret 'k2s.cluster.local-tls'
# (see addons/ingress/traefik/manifests/cluster-local-ingress.yaml)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-traefik-cluster-local
  namespace: rollout
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: k2s.cluster.local
      http:
        paths:
          - path: /rollout
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
